--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,34 +15,33 @@
         android:background="@android:color/holo_blue_dark">
 
 
-
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/profile_pic"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:srcCompat="@drawable/dummypropic"
-            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/dummypropic" />
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             app:cardCornerRadius="2dp"
             app:cardElevation="4dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_pic">
+            app:layout_constraintTop_toBottomOf="@+id/profile_pic"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -64,22 +63,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    app:srcCompat="@drawable/ic_action_name"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView7"
-                    app:srcCompat="@drawable/ic_action_name" />
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/name_overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:text="@string/Dummy"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="?android:attr/textColorPrimary"
                     app:layout_constraintLeft_toRightOf="@+id/imageView2"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                    app:layout_constraintTop_toTopOf="@+id/imageView2"
+                    android:layout_marginLeft="8dp" />
 
                 <ImageView
                     android:id="@+id/imageView4"
@@ -89,45 +90,48 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:srcCompat="@drawable/ic_action_location"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/rollno_overview" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/hostel_overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:text="@string/Dummy"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="?android:attr/textColorPrimary"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView4"
                     app:layout_constraintTop_toTopOf="@+id/imageView4"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="16dp" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     app:srcCompat="@drawable/ic_action_rollno"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/name_overview"
+                    android:layout_marginLeft="8dp"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/rollno_overview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:text="@string/Dummy"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="?android:attr/textColorPrimary"
                     app:layout_constraintLeft_toRightOf="@+id/imageView3"
-                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                    app:layout_constraintTop_toTopOf="@+id/imageView3"
+                    android:layout_marginLeft="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -137,10 +141,8 @@
             android:id="@+id/cardView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             app:cardCornerRadius="2dp"
             app:cardElevation="4dp"
@@ -154,7 +156,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/editText"
+                    android:id="@+id/email_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -188,7 +190,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                 <TextView
-                    android:id="@+id/editText2"
+                    android:id="@+id/phone_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
@@ -209,7 +211,7 @@
                     app:srcCompat="@drawable/ic_action_mobile"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText" />
+                    app:layout_constraintTop_toBottomOf="@+id/email_info" />
 
                 <ImageView
                     android:id="@+id/imageView6"
@@ -219,23 +221,22 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:srcCompat="@drawable/ic_action_linkedin"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText2" />
+                    app:layout_constraintTop_toBottomOf="@+id/phone_info" />
 
                 <TextView
-                    android:id="@+id/editText3"
+                    android:id="@+id/linkedin_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:inputType="textEmailAddress"
                     android:text="@string/Dummy"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/imageView6"
                     app:layout_constraintTop_toTopOf="@+id/imageView6"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp" />
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
 
@@ -248,7 +249,8 @@
             android:text="@string/Achievements"
             android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView2"
+            android:layout_marginLeft="16dp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/accom_rv"
@@ -265,14 +267,16 @@
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
             app:cardElevation="4dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/cardView3"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/accom_rv">
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/accom_rv"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -290,7 +294,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/editText6"
+                    android:id="@+id/aboutyourself"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
